Fixed visit_box alignment
git-svn-id: http://clinicdb.rubyforge.org/svn@130 d096a246-4d2d-4550-b7bf-e545da479d79

--- a/public/stylesheets/visit_box.css
+++ b/public/stylesheets/visit_box.css
@@ -59,6 +59,7 @@ td.visit_box_soap {
 	color: #000088;
 	font-size: 11pt;
 	font-family: sans-serif;
+	text-align: left;
 }
 
 .visit_box_text {
@@ -69,6 +70,7 @@ td.visit_box_soap {
 	padding-left: 25px;
 	margin-top: 5px;
 	margin-bottom: 5px;
+	text-align: left;
 }
 
 .visit_action_box {
